parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    VOID
    WITH

Grammar

Rule 0     S' -> line
Rule 1     line -> nline line
Rule 2     line -> nline
Rule 3     nline -> dtype var SCOLON
Rule 4     nline -> STR var SCOLON
Rule 5     nline -> fline
Rule 6     nline -> STR IDVAR EQUAL strvar SCOLON
Rule 7     nline -> BOOL MAIN LPAREN RPAREN lcb line rcb
Rule 8     nline -> RETURN LPAREN bval RPAREN SCOLON
Rule 9     nline -> ifsts
Rule 10    nline -> EXIT LPAREN RPAREN SCOLON
Rule 11    nline -> PRINT LPAREN pline RPAREN SCOLON
Rule 12    pline -> exp
Rule 13    pline -> STRING
Rule 14    nline -> FOR LPAREN fline bexp SCOLON assign RPAREN lcb line rcb
Rule 15    nline -> WHILE LPAREN bexp RPAREN lcb line rcb
Rule 16    ifsts -> IF LPAREN bexp RPAREN lcb line rcb elsests
Rule 17    rcb -> RCB
Rule 18    lcb -> LCB
Rule 19    elsests -> ELSE lcb line rcb
Rule 20    elsests -> ELSE ifsts
Rule 21    elsests -> empty
Rule 22    numexp -> assign SCOLON
Rule 23    exp -> exp PLUS term
Rule 24    exp -> exp MINUS term
Rule 25    exp -> term
Rule 26    term -> term MUL fact
Rule 27    term -> term DIV fact
Rule 28    term -> term MOD fact
Rule 29    term -> fact
Rule 30    fact -> INTEGER
Rule 31    fact -> FLOAT
Rule 32    fact -> varval
Rule 33    fact -> bval
Rule 34    fact -> CHAR
Rule 35    varval -> var
Rule 36    varval -> var LBB exp RBB
Rule 37    bval -> TRUE
Rule 38    bval -> FALSE
Rule 39    var -> IDVAR
Rule 40    dtype -> INT
Rule 41    dtype -> FLT
Rule 42    dtype -> CHR
Rule 43    dtype -> BOOL
Rule 44    strvar -> STRING
Rule 45    strvar -> varval
Rule 46    bexp -> bexp andor bexp2
Rule 47    bexp -> bexp2
Rule 48    bexp2 -> bexp2 rln exp
Rule 49    bexp2 -> exp
Rule 50    rln -> DEQUAL
Rule 51    rln -> GTHEN
Rule 52    rln -> LTHEN
Rule 53    rln -> NOT
Rule 54    andor -> AND
Rule 55    andor -> OR
Rule 56    empty -> <empty>
Rule 57    assign -> varval EQUAL exp
Rule 58    assign -> varval EQUAL STRING
Rule 59    fline -> dtype numexp
Rule 60    fline -> numexp
Rule 61    nline -> dtype LBB RBB IDVAR EQUAL arrt SCOLON
Rule 62    nline -> STR LBB RBB IDVAR EQUAL arrt SCOLON
Rule 63    arrt -> var
Rule 64    arrt -> LCB dws RCB
Rule 65    dws -> factarr COM dws
Rule 66    dws -> factarr
Rule 67    factarr -> fact
Rule 68    factarr -> STRING

Terminals, with rules where they appear

AND                  : 54
BOOL                 : 7 43
CHAR                 : 34
CHR                  : 42
COM                  : 65
COMMENT              : 
DEQUAL               : 50
DIV                  : 27
ELSE                 : 19 20
EQUAL                : 6 57 58 61 62
EXIT                 : 10
FALSE                : 38
FLOAT                : 31
FLT                  : 41
FOR                  : 14
GTHEN                : 51
IDVAR                : 6 39 61 62
IF                   : 16
INT                  : 40
INTEGER              : 30
LBB                  : 36 61 62
LCB                  : 18 64
LPAREN               : 7 8 10 11 14 15 16
LTHEN                : 52
MAIN                 : 7
MINUS                : 24
MOD                  : 28
MUL                  : 26
NOT                  : 53
OR                   : 55
PLUS                 : 23
PRINT                : 11
RBB                  : 36 61 62
RCB                  : 17 64
RETURN               : 8
RPAREN               : 7 8 10 11 14 15 16
SCOLON               : 3 4 6 8 10 11 14 22 61 62
STR                  : 4 6 62
STRING               : 13 44 58 68
TRUE                 : 37
VOID                 : 
WHILE                : 15
WITH                 : 
error                : 

Nonterminals, with rules where they appear

andor                : 46
arrt                 : 61 62
assign               : 14 22
bexp                 : 14 15 16 46
bexp2                : 46 47 48
bval                 : 8 33
dtype                : 3 59 61
dws                  : 64 65
elsests              : 16
empty                : 21
exp                  : 12 23 24 36 48 49 57
fact                 : 26 27 28 29 67
factarr              : 65 66
fline                : 5 14
ifsts                : 9 20
lcb                  : 7 14 15 16 19
line                 : 1 7 14 15 16 19 0
nline                : 1 2
numexp               : 59 60
pline                : 11
rcb                  : 7 14 15 16 19
rln                  : 48
strvar               : 6
term                 : 23 24 25 26 27 28
var                  : 3 4 35 36 63
varval               : 32 45 57 58

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . nline line
    (2) line -> . nline
    (3) nline -> . dtype var SCOLON
    (4) nline -> . STR var SCOLON
    (5) nline -> . fline
    (6) nline -> . STR IDVAR EQUAL strvar SCOLON
    (7) nline -> . BOOL MAIN LPAREN RPAREN lcb line rcb
    (8) nline -> . RETURN LPAREN bval RPAREN SCOLON
    (9) nline -> . ifsts
    (10) nline -> . EXIT LPAREN RPAREN SCOLON
    (11) nline -> . PRINT LPAREN pline RPAREN SCOLON
    (14) nline -> . FOR LPAREN fline bexp SCOLON assign RPAREN lcb line rcb
    (15) nline -> . WHILE LPAREN bexp RPAREN lcb line rcb
    (61) nline -> . dtype LBB RBB IDVAR EQUAL arrt SCOLON
    (62) nline -> . STR LBB RBB IDVAR EQUAL arrt SCOLON
    (40) dtype -> . INT
    (41) dtype -> . FLT
    (42) dtype -> . CHR
    (43) dtype -> . BOOL
    (59) fline -> . dtype numexp
    (60) fline -> . numexp
    (16) ifsts -> . IF LPAREN bexp RPAREN lcb line rcb elsests
    (22) numexp -> . assign SCOLON
    (57) assign -> . varval EQUAL exp
    (58) assign -> . varval EQUAL STRING
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (39) var -> . IDVAR

    STR             shift and go to state 5
    BOOL            shift and go to state 8
    RETURN          shift and go to state 9
    EXIT            shift and go to state 11
    PRINT           shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 15
    INT             shift and go to state 16
    FLT             shift and go to state 17
    CHR             shift and go to state 18
    IF              shift and go to state 20
    IDVAR           shift and go to state 7

    line                           shift and go to state 1
    nline                          shift and go to state 2
    dtype                          shift and go to state 3
    var                            shift and go to state 4
    fline                          shift and go to state 6
    ifsts                          shift and go to state 10
    assign                         shift and go to state 14
    numexp                         shift and go to state 19
    varval                         shift and go to state 21

state 1

    (0) S' -> line .



state 2

    (1) line -> nline . line
    (2) line -> nline .
    (1) line -> . nline line
    (2) line -> . nline
    (3) nline -> . dtype var SCOLON
    (4) nline -> . STR var SCOLON
    (5) nline -> . fline
    (6) nline -> . STR IDVAR EQUAL strvar SCOLON
    (7) nline -> . BOOL MAIN LPAREN RPAREN lcb line rcb
    (8) nline -> . RETURN LPAREN bval RPAREN SCOLON
    (9) nline -> . ifsts
    (10) nline -> . EXIT LPAREN RPAREN SCOLON
    (11) nline -> . PRINT LPAREN pline RPAREN SCOLON
    (14) nline -> . FOR LPAREN fline bexp SCOLON assign RPAREN lcb line rcb
    (15) nline -> . WHILE LPAREN bexp RPAREN lcb line rcb
    (61) nline -> . dtype LBB RBB IDVAR EQUAL arrt SCOLON
    (62) nline -> . STR LBB RBB IDVAR EQUAL arrt SCOLON
    (40) dtype -> . INT
    (41) dtype -> . FLT
    (42) dtype -> . CHR
    (43) dtype -> . BOOL
    (59) fline -> . dtype numexp
    (60) fline -> . numexp
    (16) ifsts -> . IF LPAREN bexp RPAREN lcb line rcb elsests
    (22) numexp -> . assign SCOLON
    (57) assign -> . varval EQUAL exp
    (58) assign -> . varval EQUAL STRING
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (39) var -> . IDVAR

    $end            reduce using rule 2 (line -> nline .)
    RCB             reduce using rule 2 (line -> nline .)
    STR             shift and go to state 5
    BOOL            shift and go to state 8
    RETURN          shift and go to state 9
    EXIT            shift and go to state 11
    PRINT           shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 15
    INT             shift and go to state 16
    FLT             shift and go to state 17
    CHR             shift and go to state 18
    IF              shift and go to state 20
    IDVAR           shift and go to state 7

    nline                          shift and go to state 2
    line                           shift and go to state 22
    dtype                          shift and go to state 3
    var                            shift and go to state 4
    fline                          shift and go to state 6
    ifsts                          shift and go to state 10
    assign                         shift and go to state 14
    numexp                         shift and go to state 19
    varval                         shift and go to state 21

state 3

    (3) nline -> dtype . var SCOLON
    (61) nline -> dtype . LBB RBB IDVAR EQUAL arrt SCOLON
    (59) fline -> dtype . numexp
    (39) var -> . IDVAR
    (22) numexp -> . assign SCOLON
    (57) assign -> . varval EQUAL exp
    (58) assign -> . varval EQUAL STRING
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB

    LBB             shift and go to state 24
    IDVAR           shift and go to state 7

    var                            shift and go to state 23
    numexp                         shift and go to state 25
    assign                         shift and go to state 14
    varval                         shift and go to state 21

state 4

    (35) varval -> var .
    (36) varval -> var . LBB exp RBB

    EQUAL           reduce using rule 35 (varval -> var .)
    MUL             reduce using rule 35 (varval -> var .)
    DIV             reduce using rule 35 (varval -> var .)
    MOD             reduce using rule 35 (varval -> var .)
    RBB             reduce using rule 35 (varval -> var .)
    PLUS            reduce using rule 35 (varval -> var .)
    MINUS           reduce using rule 35 (varval -> var .)
    RPAREN          reduce using rule 35 (varval -> var .)
    DEQUAL          reduce using rule 35 (varval -> var .)
    GTHEN           reduce using rule 35 (varval -> var .)
    LTHEN           reduce using rule 35 (varval -> var .)
    NOT             reduce using rule 35 (varval -> var .)
    AND             reduce using rule 35 (varval -> var .)
    OR              reduce using rule 35 (varval -> var .)
    SCOLON          reduce using rule 35 (varval -> var .)
    COM             reduce using rule 35 (varval -> var .)
    RCB             reduce using rule 35 (varval -> var .)
    LBB             shift and go to state 26


state 5

    (4) nline -> STR . var SCOLON
    (6) nline -> STR . IDVAR EQUAL strvar SCOLON
    (62) nline -> STR . LBB RBB IDVAR EQUAL arrt SCOLON
    (39) var -> . IDVAR

    IDVAR           shift and go to state 28
    LBB             shift and go to state 29

    var                            shift and go to state 27

state 6

    (5) nline -> fline .

    STR             reduce using rule 5 (nline -> fline .)
    BOOL            reduce using rule 5 (nline -> fline .)
    RETURN          reduce using rule 5 (nline -> fline .)
    EXIT            reduce using rule 5 (nline -> fline .)
    PRINT           reduce using rule 5 (nline -> fline .)
    FOR             reduce using rule 5 (nline -> fline .)
    WHILE           reduce using rule 5 (nline -> fline .)
    INT             reduce using rule 5 (nline -> fline .)
    FLT             reduce using rule 5 (nline -> fline .)
    CHR             reduce using rule 5 (nline -> fline .)
    IF              reduce using rule 5 (nline -> fline .)
    IDVAR           reduce using rule 5 (nline -> fline .)
    $end            reduce using rule 5 (nline -> fline .)
    RCB             reduce using rule 5 (nline -> fline .)


state 7

    (39) var -> IDVAR .

    LBB             reduce using rule 39 (var -> IDVAR .)
    EQUAL           reduce using rule 39 (var -> IDVAR .)
    SCOLON          reduce using rule 39 (var -> IDVAR .)
    MUL             reduce using rule 39 (var -> IDVAR .)
    DIV             reduce using rule 39 (var -> IDVAR .)
    MOD             reduce using rule 39 (var -> IDVAR .)
    RBB             reduce using rule 39 (var -> IDVAR .)
    PLUS            reduce using rule 39 (var -> IDVAR .)
    MINUS           reduce using rule 39 (var -> IDVAR .)
    RPAREN          reduce using rule 39 (var -> IDVAR .)
    DEQUAL          reduce using rule 39 (var -> IDVAR .)
    GTHEN           reduce using rule 39 (var -> IDVAR .)
    LTHEN           reduce using rule 39 (var -> IDVAR .)
    NOT             reduce using rule 39 (var -> IDVAR .)
    AND             reduce using rule 39 (var -> IDVAR .)
    OR              reduce using rule 39 (var -> IDVAR .)
    COM             reduce using rule 39 (var -> IDVAR .)
    RCB             reduce using rule 39 (var -> IDVAR .)


state 8

    (7) nline -> BOOL . MAIN LPAREN RPAREN lcb line rcb
    (43) dtype -> BOOL .

    MAIN            shift and go to state 30
    LBB             reduce using rule 43 (dtype -> BOOL .)
    IDVAR           reduce using rule 43 (dtype -> BOOL .)


state 9

    (8) nline -> RETURN . LPAREN bval RPAREN SCOLON

    LPAREN          shift and go to state 31


state 10

    (9) nline -> ifsts .

    STR             reduce using rule 9 (nline -> ifsts .)
    BOOL            reduce using rule 9 (nline -> ifsts .)
    RETURN          reduce using rule 9 (nline -> ifsts .)
    EXIT            reduce using rule 9 (nline -> ifsts .)
    PRINT           reduce using rule 9 (nline -> ifsts .)
    FOR             reduce using rule 9 (nline -> ifsts .)
    WHILE           reduce using rule 9 (nline -> ifsts .)
    INT             reduce using rule 9 (nline -> ifsts .)
    FLT             reduce using rule 9 (nline -> ifsts .)
    CHR             reduce using rule 9 (nline -> ifsts .)
    IF              reduce using rule 9 (nline -> ifsts .)
    IDVAR           reduce using rule 9 (nline -> ifsts .)
    $end            reduce using rule 9 (nline -> ifsts .)
    RCB             reduce using rule 9 (nline -> ifsts .)


state 11

    (10) nline -> EXIT . LPAREN RPAREN SCOLON

    LPAREN          shift and go to state 32


state 12

    (11) nline -> PRINT . LPAREN pline RPAREN SCOLON

    LPAREN          shift and go to state 33


state 13

    (14) nline -> FOR . LPAREN fline bexp SCOLON assign RPAREN lcb line rcb

    LPAREN          shift and go to state 34


state 14

    (22) numexp -> assign . SCOLON

    SCOLON          shift and go to state 35


state 15

    (15) nline -> WHILE . LPAREN bexp RPAREN lcb line rcb

    LPAREN          shift and go to state 36


state 16

    (40) dtype -> INT .

    LBB             reduce using rule 40 (dtype -> INT .)
    IDVAR           reduce using rule 40 (dtype -> INT .)


state 17

    (41) dtype -> FLT .

    LBB             reduce using rule 41 (dtype -> FLT .)
    IDVAR           reduce using rule 41 (dtype -> FLT .)


state 18

    (42) dtype -> CHR .

    LBB             reduce using rule 42 (dtype -> CHR .)
    IDVAR           reduce using rule 42 (dtype -> CHR .)


state 19

    (60) fline -> numexp .

    STR             reduce using rule 60 (fline -> numexp .)
    BOOL            reduce using rule 60 (fline -> numexp .)
    RETURN          reduce using rule 60 (fline -> numexp .)
    EXIT            reduce using rule 60 (fline -> numexp .)
    PRINT           reduce using rule 60 (fline -> numexp .)
    FOR             reduce using rule 60 (fline -> numexp .)
    WHILE           reduce using rule 60 (fline -> numexp .)
    INT             reduce using rule 60 (fline -> numexp .)
    FLT             reduce using rule 60 (fline -> numexp .)
    CHR             reduce using rule 60 (fline -> numexp .)
    IF              reduce using rule 60 (fline -> numexp .)
    IDVAR           reduce using rule 60 (fline -> numexp .)
    $end            reduce using rule 60 (fline -> numexp .)
    RCB             reduce using rule 60 (fline -> numexp .)
    INTEGER         reduce using rule 60 (fline -> numexp .)
    FLOAT           reduce using rule 60 (fline -> numexp .)
    CHAR            reduce using rule 60 (fline -> numexp .)
    TRUE            reduce using rule 60 (fline -> numexp .)
    FALSE           reduce using rule 60 (fline -> numexp .)


state 20

    (16) ifsts -> IF . LPAREN bexp RPAREN lcb line rcb elsests

    LPAREN          shift and go to state 37


state 21

    (57) assign -> varval . EQUAL exp
    (58) assign -> varval . EQUAL STRING

    EQUAL           shift and go to state 38


state 22

    (1) line -> nline line .

    $end            reduce using rule 1 (line -> nline line .)
    RCB             reduce using rule 1 (line -> nline line .)


state 23

    (3) nline -> dtype var . SCOLON
    (35) varval -> var .
    (36) varval -> var . LBB exp RBB

    SCOLON          shift and go to state 39
    EQUAL           reduce using rule 35 (varval -> var .)
    LBB             shift and go to state 26


state 24

    (61) nline -> dtype LBB . RBB IDVAR EQUAL arrt SCOLON

    RBB             shift and go to state 40


state 25

    (59) fline -> dtype numexp .

    STR             reduce using rule 59 (fline -> dtype numexp .)
    BOOL            reduce using rule 59 (fline -> dtype numexp .)
    RETURN          reduce using rule 59 (fline -> dtype numexp .)
    EXIT            reduce using rule 59 (fline -> dtype numexp .)
    PRINT           reduce using rule 59 (fline -> dtype numexp .)
    FOR             reduce using rule 59 (fline -> dtype numexp .)
    WHILE           reduce using rule 59 (fline -> dtype numexp .)
    INT             reduce using rule 59 (fline -> dtype numexp .)
    FLT             reduce using rule 59 (fline -> dtype numexp .)
    CHR             reduce using rule 59 (fline -> dtype numexp .)
    IF              reduce using rule 59 (fline -> dtype numexp .)
    IDVAR           reduce using rule 59 (fline -> dtype numexp .)
    $end            reduce using rule 59 (fline -> dtype numexp .)
    RCB             reduce using rule 59 (fline -> dtype numexp .)
    INTEGER         reduce using rule 59 (fline -> dtype numexp .)
    FLOAT           reduce using rule 59 (fline -> dtype numexp .)
    CHAR            reduce using rule 59 (fline -> dtype numexp .)
    TRUE            reduce using rule 59 (fline -> dtype numexp .)
    FALSE           reduce using rule 59 (fline -> dtype numexp .)


state 26

    (36) varval -> var LBB . exp RBB
    (23) exp -> . exp PLUS term
    (24) exp -> . exp MINUS term
    (25) exp -> . term
    (26) term -> . term MUL fact
    (27) term -> . term DIV fact
    (28) term -> . term MOD fact
    (29) term -> . fact
    (30) fact -> . INTEGER
    (31) fact -> . FLOAT
    (32) fact -> . varval
    (33) fact -> . bval
    (34) fact -> . CHAR
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (37) bval -> . TRUE
    (38) bval -> . FALSE
    (39) var -> . IDVAR

    INTEGER         shift and go to state 44
    FLOAT           shift and go to state 45
    CHAR            shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    IDVAR           shift and go to state 7

    var                            shift and go to state 4
    exp                            shift and go to state 41
    term                           shift and go to state 42
    fact                           shift and go to state 43
    varval                         shift and go to state 46
    bval                           shift and go to state 47

state 27

    (4) nline -> STR var . SCOLON

    SCOLON          shift and go to state 51


state 28

    (6) nline -> STR IDVAR . EQUAL strvar SCOLON
    (39) var -> IDVAR .

    EQUAL           shift and go to state 52
    SCOLON          reduce using rule 39 (var -> IDVAR .)


state 29

    (62) nline -> STR LBB . RBB IDVAR EQUAL arrt SCOLON

    RBB             shift and go to state 53


state 30

    (7) nline -> BOOL MAIN . LPAREN RPAREN lcb line rcb

    LPAREN          shift and go to state 54


state 31

    (8) nline -> RETURN LPAREN . bval RPAREN SCOLON
    (37) bval -> . TRUE
    (38) bval -> . FALSE

    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    bval                           shift and go to state 55

state 32

    (10) nline -> EXIT LPAREN . RPAREN SCOLON

    RPAREN          shift and go to state 56


state 33

    (11) nline -> PRINT LPAREN . pline RPAREN SCOLON
    (12) pline -> . exp
    (13) pline -> . STRING
    (23) exp -> . exp PLUS term
    (24) exp -> . exp MINUS term
    (25) exp -> . term
    (26) term -> . term MUL fact
    (27) term -> . term DIV fact
    (28) term -> . term MOD fact
    (29) term -> . fact
    (30) fact -> . INTEGER
    (31) fact -> . FLOAT
    (32) fact -> . varval
    (33) fact -> . bval
    (34) fact -> . CHAR
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (37) bval -> . TRUE
    (38) bval -> . FALSE
    (39) var -> . IDVAR

    STRING          shift and go to state 59
    INTEGER         shift and go to state 44
    FLOAT           shift and go to state 45
    CHAR            shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    IDVAR           shift and go to state 7

    pline                          shift and go to state 57
    exp                            shift and go to state 58
    term                           shift and go to state 42
    fact                           shift and go to state 43
    varval                         shift and go to state 46
    bval                           shift and go to state 47
    var                            shift and go to state 4

state 34

    (14) nline -> FOR LPAREN . fline bexp SCOLON assign RPAREN lcb line rcb
    (59) fline -> . dtype numexp
    (60) fline -> . numexp
    (40) dtype -> . INT
    (41) dtype -> . FLT
    (42) dtype -> . CHR
    (43) dtype -> . BOOL
    (22) numexp -> . assign SCOLON
    (57) assign -> . varval EQUAL exp
    (58) assign -> . varval EQUAL STRING
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (39) var -> . IDVAR

    INT             shift and go to state 16
    FLT             shift and go to state 17
    CHR             shift and go to state 18
    BOOL            shift and go to state 62
    IDVAR           shift and go to state 7

    fline                          shift and go to state 60
    assign                         shift and go to state 14
    dtype                          shift and go to state 61
    numexp                         shift and go to state 19
    varval                         shift and go to state 21
    var                            shift and go to state 4

state 35

    (22) numexp -> assign SCOLON .

    STR             reduce using rule 22 (numexp -> assign SCOLON .)
    BOOL            reduce using rule 22 (numexp -> assign SCOLON .)
    RETURN          reduce using rule 22 (numexp -> assign SCOLON .)
    EXIT            reduce using rule 22 (numexp -> assign SCOLON .)
    PRINT           reduce using rule 22 (numexp -> assign SCOLON .)
    FOR             reduce using rule 22 (numexp -> assign SCOLON .)
    WHILE           reduce using rule 22 (numexp -> assign SCOLON .)
    INT             reduce using rule 22 (numexp -> assign SCOLON .)
    FLT             reduce using rule 22 (numexp -> assign SCOLON .)
    CHR             reduce using rule 22 (numexp -> assign SCOLON .)
    IF              reduce using rule 22 (numexp -> assign SCOLON .)
    IDVAR           reduce using rule 22 (numexp -> assign SCOLON .)
    $end            reduce using rule 22 (numexp -> assign SCOLON .)
    RCB             reduce using rule 22 (numexp -> assign SCOLON .)
    INTEGER         reduce using rule 22 (numexp -> assign SCOLON .)
    FLOAT           reduce using rule 22 (numexp -> assign SCOLON .)
    CHAR            reduce using rule 22 (numexp -> assign SCOLON .)
    TRUE            reduce using rule 22 (numexp -> assign SCOLON .)
    FALSE           reduce using rule 22 (numexp -> assign SCOLON .)


state 36

    (15) nline -> WHILE LPAREN . bexp RPAREN lcb line rcb
    (46) bexp -> . bexp andor bexp2
    (47) bexp -> . bexp2
    (48) bexp2 -> . bexp2 rln exp
    (49) bexp2 -> . exp
    (23) exp -> . exp PLUS term
    (24) exp -> . exp MINUS term
    (25) exp -> . term
    (26) term -> . term MUL fact
    (27) term -> . term DIV fact
    (28) term -> . term MOD fact
    (29) term -> . fact
    (30) fact -> . INTEGER
    (31) fact -> . FLOAT
    (32) fact -> . varval
    (33) fact -> . bval
    (34) fact -> . CHAR
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (37) bval -> . TRUE
    (38) bval -> . FALSE
    (39) var -> . IDVAR

    INTEGER         shift and go to state 44
    FLOAT           shift and go to state 45
    CHAR            shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    IDVAR           shift and go to state 7

    bexp                           shift and go to state 63
    bexp2                          shift and go to state 64
    exp                            shift and go to state 65
    term                           shift and go to state 42
    fact                           shift and go to state 43
    varval                         shift and go to state 46
    bval                           shift and go to state 47
    var                            shift and go to state 4

state 37

    (16) ifsts -> IF LPAREN . bexp RPAREN lcb line rcb elsests
    (46) bexp -> . bexp andor bexp2
    (47) bexp -> . bexp2
    (48) bexp2 -> . bexp2 rln exp
    (49) bexp2 -> . exp
    (23) exp -> . exp PLUS term
    (24) exp -> . exp MINUS term
    (25) exp -> . term
    (26) term -> . term MUL fact
    (27) term -> . term DIV fact
    (28) term -> . term MOD fact
    (29) term -> . fact
    (30) fact -> . INTEGER
    (31) fact -> . FLOAT
    (32) fact -> . varval
    (33) fact -> . bval
    (34) fact -> . CHAR
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (37) bval -> . TRUE
    (38) bval -> . FALSE
    (39) var -> . IDVAR

    INTEGER         shift and go to state 44
    FLOAT           shift and go to state 45
    CHAR            shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    IDVAR           shift and go to state 7

    bexp                           shift and go to state 66
    bexp2                          shift and go to state 64
    exp                            shift and go to state 65
    term                           shift and go to state 42
    fact                           shift and go to state 43
    varval                         shift and go to state 46
    bval                           shift and go to state 47
    var                            shift and go to state 4

state 38

    (57) assign -> varval EQUAL . exp
    (58) assign -> varval EQUAL . STRING
    (23) exp -> . exp PLUS term
    (24) exp -> . exp MINUS term
    (25) exp -> . term
    (26) term -> . term MUL fact
    (27) term -> . term DIV fact
    (28) term -> . term MOD fact
    (29) term -> . fact
    (30) fact -> . INTEGER
    (31) fact -> . FLOAT
    (32) fact -> . varval
    (33) fact -> . bval
    (34) fact -> . CHAR
    (35) varval -> . var
    (36) varval -> . var LBB exp RBB
    (37) bval -> . TRUE
    (38) bval -> . FALSE
    (39) var -> . IDVAR

    STRING          shift and go to state 68
    INTEGER         shift and go to state 44
    FLOAT           shift and go to state 45
    CHAR            shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    IDVAR           shift and go to state 7

    varval                         shift and go to state 46
    exp                            shift and go to state 67
    term                           shift and go to state 42
    fact                           shift and go to state 43
    bval                           shift and go to state 47
    var                            shift and go to state 4

state 39

    (3) nline -> dtype var SCOLON .

    STR             reduce using rule 3 (nline -> dtype var SCOLON .)
    BOOL            reduce using rule 3 (nline -> dtype var SCOLON .)
    RETURN          reduce using rule 3 (nline -> dtype var SCOLON .)
    EXIT            reduce using rule 3 (nline -> dtype var SCOLON .)
    PRINT           reduce using rule 3 (nline -> dtype var SCOLON .)
    FOR             reduce using rule 3 (nline -> dtype var SCOLON .)
    WHILE           reduce using rule 3 (nline -> dtype var SCOLON .)
    INT             reduce using rule 3 (nline -> dtype var SCOLON .)
    FLT             reduce using rule 3 (nline -> dtype var SCOLON .)
    CHR             reduce using rule 3 (nline -> dtype var SCOLON .)
    IF              reduce using rule 3 (nline -> dtype var SCOLON .)
    IDVAR           reduce using rule 3 (nline -> dtype var SCOLON .)
    $end            reduce using rule 3 (nline -> dtype var SCOLON .)
    RCB             reduce using rule 3 (nline -> dtype var SCOLON .)


state 40

    (61) nline -> dtype LBB RBB . IDVAR EQUAL arrt SCOLON

    IDVAR           shift and go to state 69


state 41

    (36) varval -> var LBB exp . RBB
    (23) exp -> exp . PLUS term
    (24) exp -> exp . MINUS term

    RBB             shift and go to state 70
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72


state 42

    (25) exp -> term .
    (26) term -> term . MUL fact
    (27) term -> term . DIV fact
    (28) term -> term . MOD fact

    RBB             reduce using rule 25 (exp -> term .)
    PLUS            reduce using rule 25 (exp -> term .)
    MINUS           reduce using rule 25 (exp -> term .)
    RPAREN          reduce using rule 25 (exp -> term .)
    DEQUAL          reduce using rule 25 (exp -> term .)
    GTHEN           reduce using rule 25 (exp -> term .)
    LTHEN           reduce using rule 25 (exp -> term .)
    NOT             reduce using rule 25 (exp -> term .)
    AND             reduce using rule 25 (exp -> term .)
    OR              reduce using rule 25 (exp -> term .)
    SCOLON          reduce using rule 25 (exp -> term .)
    MUL             shift and go to state 73
    DIV             shift and go to state 74
    MOD             shift and go to state 75


state 43

    (29) term -> fact .

    MUL             reduce using rule 29 (term -> fact .)
    DIV             reduce using rule 29 (term -> fact .)
    MOD             reduce using rule 29 (term -> fact .)
    RBB             reduce using rule 29 (term -> fact .)
    PLUS            reduce using rule 29 (term -> fact .)
    MINUS           reduce using rule 29 (term -> fact .)
    RPAREN          reduce using rule 29 (term -> fact .)
    DEQUAL          reduce using rule 29 (term -> fact .)
    GTHEN           reduce using rule 29 (term -> fact .)
    LTHEN           reduce using rule 29 (term -> fact .)
    NOT             reduce using rule 29 (term -> fact .)
    AND             reduce using rule 29 (term -> fact .)
    OR              reduce using rule 29 (term -> fact .)
    SCOLON          reduce using rule 29 (term -> fact .)


state 44

    (30) fact -> INTEGER .

    MUL             reduce using rule 30 (fact -> INTEGER .)
    DIV             reduce using rule 30 (fact -> INTEGER .)
    MOD             reduce using rule 30 (fact -> INTEGER .)
    RBB             reduce using rule 30 (fact -> INTEGER .)
    PLUS            reduce using rule 30 (fact -> INTEGER .)
    MINUS           reduce using rule 30 (fact -> INTEGER .)
    RPAREN          reduce using rule 30 (fact -> INTEGER .)
    DEQUAL          reduce using rule 30 (fact -> INTEGER .)
    GTHEN           reduce using rule 30 (fact -> INTEGER .)
    LTHEN           reduce using rule 30 (fact -> INTEGER .)
    NOT             reduce using rule 30 (fact -> INTEGER .)
    AND             reduce using rule 30 (fact -> INTEGER .)
    OR              reduce using rule 30 (fact -> INTEGER .)
    SCOLON          reduce using rule 30 (fact -> INTEGER .)
    COM             reduce using rule 30 (fact -> INTEGER .)
    RCB             reduce using rule 30 (fact -> INTEGER .)


state 45

    (31) fact -> FLOAT .

    MUL             reduce using rule 31 (fact -> FLOAT .)
    DIV             reduce using rule 31 (fact -> FLOAT .)
    MOD             reduce using rule 31 (fact -> FLOAT .)
    RBB             reduce using rule 31 (fact -> FLOAT .)
    PLUS            reduce using rule 31 (fact -> FLOAT .)
    MINUS           reduce using rule 31 (fact -> FLOAT .)
    RPAREN          reduce using rule 31 (fact -> FLOAT .)
    DEQUAL          reduce using rule 31 (fact -> FLOAT .)
    GTHEN           reduce using rule 31 (fact -> FLOAT .)
    LTHEN           reduce using rule 31 (fact -> FLOAT .)
    NOT             reduce using rule 31 (fact -> FLOAT .)
    AND             reduce using rule 31 (fact -> FLOAT .)
    OR              reduce using rule 31 (fact -> FLOAT .)
    SCOLON          reduce using rule 31 (fact -> FLOAT .)
    COM             reduce using rule 31 (fact -> FLOAT .)
    RCB             reduce using rule 31 (fact -> FLOAT .)


state 46

    (32) fact -> varval .
